[package]
name = "doo"
version = "0.1.0"
edition = "2021"
description = "A CLI wrapper for other commands with persistent variables and contexts"
authors = ["Your Name <your.email@example.com>"]
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/urbanisierung/doo"

[[bin]]
name = "doo"
path = "src/main.rs"

[dependencies]
clap = { version = "4.0", features = ["derive", "color"] }
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
dirs = "5.0"
anyhow = "1.0"
thiserror = "1.0"
colored = "2.0"
dialoguer = { version = "0.11", features = ["fuzzy-select"] }
reqwest = { version = "0.11", features = ["json", "rustls-tls"], default-features = false }
tokio = { version = "1.0", features = ["full"] }
base64 = "0.13"
tempfile = "3.0"

[dev-dependencies]
